[package]
name = "rust-iic"
version = "0.1.0"
edition = "2021"
default-run = "rust-iic"
build = "build.rs"

[features]
debug-mode = []

[dependencies]
a2kit = "4.0.1"
anyhow = "1.0.100"
bitflags = "2.8.0"
clap = { version = "4.5.27", features = ["derive"] }
cpal = "0.16.0"
fastrand = "2.0"
env_logger = "0.11.6"
image = "0.25.5"
log = "0.4.25"
owo-colors = "4.1.0"
pixels = "0.15.0"
regex = "1.11.1"
ringbuf = "0.4.8"
wgpu = "24.0.0"
winit = "0.30.8"
