[package]
name = "rust-iic"
version = "0.1.0"
edition = "2021"
default-run = "rust-iic"
build = "build.rs"

[features]
debug-mode = []

[dependencies]
a2kit = "4.0.1"
anyhow = "1.0.100"
bitflags = "2.8.0"
bytemuck = { version = "1", features = ["derive"] }
clap = { version = "4.5.27", features = ["derive"] }
crc32fast = "1"
cpal = "0.16.0"
ctrlc = "3.4"
egui = "0.33"
egui-wgpu = "0.33"
egui-winit = "0.33"
fastrand = "2.0"
gilrs = "0.11"
env_logger = "0.11.6"
image = "0.25.5"
log = "0.4.25"
owo-colors = "4.1.0"
pixels = "0.16.0"
regex = "1.11.1"
rfd = "0.15"
ringbuf = "0.4.8"
shader_ui = { path = "src/render/shader_ui" }
wgpu = "27.0.1"
winit = "0.30.13"
json = "0.12.4"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSData"] }
objc2-app-kit = { version = "0.3", features = ["NSApplication", "NSImage", "NSRunningApplication"] }
